{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 177,
  "lineage": "b431f9ec-f911-ac6c-8064-e7c63ed21a52",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Machine1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0e6a50b0059fd2cc3",
            "arn": "arn:aws:ec2:us-west-1:623105333137:instance/i-0cdd55ae260ed2a98",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cdd55ae260ed2a98",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "jayamano1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0b92bf2f05a8cf394"
              }
            ],
            "primary_network_interface_id": "eni-0b92bf2f05a8cf394",
            "private_dns": "ip-10-0-1-251.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.251",
            "public_ip": "13.56.19.223",
            "region": "us-west-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0f95a20fb2a26a809",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d779e1d013fc65d4",
            "tags": {
              "Name": "Machine1"
            },
            "tags_all": {
              "Name": "Machine1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0983f1e0a5db7c926"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "623105333137",
            "id": "i-0cdd55ae260ed2a98",
            "region": "us-west-1"
          },
          "dependencies": [
            "aws_security_group.Security_Group",
            "aws_subnet.Subnet1",
            "aws_vpc.Vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Machine2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0e6a50b0059fd2cc3",
            "arn": "arn:aws:ec2:us-west-1:623105333137:instance/i-0a2c10105fe47fbe0",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a2c10105fe47fbe0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "jayamano1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-00846391960a430e7"
              }
            ],
            "primary_network_interface_id": "eni-00846391960a430e7",
            "private_dns": "ip-10-0-1-122.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.122",
            "public_ip": "3.101.101.117",
            "region": "us-west-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a4d5efbd166d67e5",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d779e1d013fc65d4",
            "tags": {
              "Name": "Machine2"
            },
            "tags_all": {
              "Name": "Machine2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0983f1e0a5db7c926"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "623105333137",
            "id": "i-0a2c10105fe47fbe0",
            "region": "us-west-1"
          },
          "dependencies": [
            "aws_security_group.Security_Group",
            "aws_subnet.Subnet1",
            "aws_vpc.Vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Machine3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0e6a50b0059fd2cc3",
            "arn": "arn:aws:ec2:us-west-1:623105333137:instance/i-08b68c191b93455b5",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08b68c191b93455b5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "jayamano1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-002ee8a3fb841b2b5"
              }
            ],
            "primary_network_interface_id": "eni-002ee8a3fb841b2b5",
            "private_dns": "ip-10-0-2-102.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.102",
            "public_ip": "54.183.130.168",
            "region": "us-west-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-014f417b7d99d879e",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-073b41e495798e4f3",
            "tags": {
              "Name": "Machine3"
            },
            "tags_all": {
              "Name": "Machine3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0983f1e0a5db7c926"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "623105333137",
            "id": "i-08b68c191b93455b5",
            "region": "us-west-1"
          },
          "dependencies": [
            "aws_security_group.Security_Group",
            "aws_subnet.Subnet2",
            "aws_vpc.Vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Internet_Gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:623105333137:internet-gateway/igw-063fe4e3b312777ea",
            "id": "igw-063fe4e3b312777ea",
            "owner_id": "623105333137",
            "region": "us-west-1",
            "tags": {
              "Name": "Internet_Gateway"
            },
            "tags_all": {
              "Name": "Internet_Gateway"
            },
            "vpc_id": "vpc-0ad40cb0f96e15c87"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.Vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "Load_Balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-1:623105333137:loadbalancer/app/load-balancer/d3778d40f4eb8281",
            "arn_suffix": "app/load-balancer/d3778d40f4eb8281",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "load-balancer-2059787859.us-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-west-1:623105333137:loadbalancer/app/load-balancer/d3778d40f4eb8281",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "load-balancer",
            "preserve_host_header": false,
            "region": "us-west-1",
            "security_groups": [
              "sg-0983f1e0a5db7c926"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-073b41e495798e4f3"
              },
              {
                "subnet_id": "subnet-0d779e1d013fc65d4"
              }
            ],
            "subnets": [
              "subnet-073b41e495798e4f3",
              "subnet-0d779e1d013fc65d4"
            ],
            "tags": {
              "Environment": "preview"
            },
            "tags_all": {
              "Environment": "preview"
            },
            "vpc_id": "vpc-0ad40cb0f96e15c87",
            "xff_header_processing_mode": "append",
            "zone_id": "Z368ELLRRE2KJ0"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-west-1:623105333137:loadbalancer/app/load-balancer/d3778d40f4eb8281"
          },
          "dependencies": [
            "aws_security_group.Security_Group",
            "aws_subnet.Subnet1",
            "aws_subnet.Subnet2",
            "aws_vpc.Vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lb_listener_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-1:623105333137:listener/app/load-balancer/d3778d40f4eb8281/60ed7d4c2151764c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:623105333137:targetgroup/TargetGroup1/228b2e74e7bf93a3",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:623105333137:listener/app/load-balancer/d3778d40f4eb8281/60ed7d4c2151764c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-1:623105333137:loadbalancer/app/load-balancer/d3778d40f4eb8281",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-west-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-west-1:623105333137:listener/app/load-balancer/d3778d40f4eb8281/60ed7d4c2151764c"
          },
          "dependencies": [
            "aws_lb.Load_Balancer",
            "aws_lb_target_group.TargetGroup1",
            "aws_security_group.Security_Group",
            "aws_subnet.Subnet1",
            "aws_subnet.Subnet2",
            "aws_vpc.Vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lb_listener_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-1:623105333137:listener/app/load-balancer/d3778d40f4eb8281/c2b0b8033133a73e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:623105333137:targetgroup/TargetGroup2/6482534245370570",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:623105333137:listener/app/load-balancer/d3778d40f4eb8281/c2b0b8033133a73e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-1:623105333137:loadbalancer/app/load-balancer/d3778d40f4eb8281",
            "mutual_authentication": [],
            "port": 8080,
            "protocol": "HTTP",
            "region": "us-west-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-west-1:623105333137:listener/app/load-balancer/d3778d40f4eb8281/c2b0b8033133a73e"
          },
          "dependencies": [
            "aws_lb.Load_Balancer",
            "aws_lb_target_group.TargetGroup2",
            "aws_security_group.Security_Group",
            "aws_subnet.Subnet1",
            "aws_subnet.Subnet2",
            "aws_vpc.Vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "TargetGroup1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-1:623105333137:targetgroup/TargetGroup1/228b2e74e7bf93a3",
            "arn_suffix": "targetgroup/TargetGroup1/228b2e74e7bf93a3",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:623105333137:targetgroup/TargetGroup1/228b2e74e7bf93a3",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-west-1:623105333137:loadbalancer/app/load-balancer/d3778d40f4eb8281"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "TargetGroup1",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-west-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ad40cb0f96e15c87"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-west-1:623105333137:targetgroup/TargetGroup1/228b2e74e7bf93a3"
          },
          "dependencies": [
            "aws_vpc.Vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "TargetGroup2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-1:623105333137:targetgroup/TargetGroup2/6482534245370570",
            "arn_suffix": "targetgroup/TargetGroup2/6482534245370570",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:623105333137:targetgroup/TargetGroup2/6482534245370570",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-west-1:623105333137:loadbalancer/app/load-balancer/d3778d40f4eb8281"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "TargetGroup2",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-west-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ad40cb0f96e15c87"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-west-1:623105333137:targetgroup/TargetGroup2/6482534245370570"
          },
          "dependencies": [
            "aws_vpc.Vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "TargetGroup_m1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-1:623105333137:targetgroup/TargetGroup1/228b2e74e7bf93a3-20251111000943576500000007",
            "port": 80,
            "region": "us-west-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:623105333137:targetgroup/TargetGroup1/228b2e74e7bf93a3",
            "target_id": "i-0cdd55ae260ed2a98"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.Machine1",
            "aws_lb_target_group.TargetGroup1",
            "aws_security_group.Security_Group",
            "aws_subnet.Subnet1",
            "aws_vpc.Vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "TargetGroup_m2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-1:623105333137:targetgroup/TargetGroup1/228b2e74e7bf93a3-20251111000943450200000005",
            "port": 80,
            "region": "us-west-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:623105333137:targetgroup/TargetGroup1/228b2e74e7bf93a3",
            "target_id": "i-0a2c10105fe47fbe0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.Machine2",
            "aws_lb_target_group.TargetGroup1",
            "aws_security_group.Security_Group",
            "aws_subnet.Subnet1",
            "aws_vpc.Vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "TargetGroup_m3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-1:623105333137:targetgroup/TargetGroup2/6482534245370570-20251111000943549700000006",
            "port": 8080,
            "region": "us-west-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:623105333137:targetgroup/TargetGroup2/6482534245370570",
            "target_id": "i-08b68c191b93455b5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.Machine3",
            "aws_lb_target_group.TargetGroup2",
            "aws_security_group.Security_Group",
            "aws_subnet.Subnet2",
            "aws_vpc.Vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:623105333137:route-table/rtb-0ff9a74432b650696",
            "id": "rtb-0ff9a74432b650696",
            "owner_id": "623105333137",
            "propagating_vgws": [],
            "region": "us-west-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-063fe4e3b312777ea",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route_table"
            },
            "tags_all": {
              "Name": "Route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ad40cb0f96e15c87"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "623105333137",
            "id": "rtb-0ff9a74432b650696",
            "region": "us-west-1"
          },
          "dependencies": [
            "aws_internet_gateway.Internet_Gateway",
            "aws_vpc.Vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_private_ass_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0142e1e2caa207b27",
            "region": "us-west-1",
            "route_table_id": "rtb-0ff9a74432b650696",
            "subnet_id": "subnet-073b41e495798e4f3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.Internet_Gateway",
            "aws_route_table.Route_table",
            "aws_subnet.Subnet2",
            "aws_vpc.Vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_public_ass_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08a8037a36e541e15",
            "region": "us-west-1",
            "route_table_id": "rtb-0ff9a74432b650696",
            "subnet_id": "subnet-0d779e1d013fc65d4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.Internet_Gateway",
            "aws_route_table.Route_table",
            "aws_subnet.Subnet1",
            "aws_vpc.Vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Security_Group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:623105333137:security-group/sg-0983f1e0a5db7c926",
            "description": "Allows HTTP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0983f1e0a5db7c926",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Security_Group",
            "name_prefix": "",
            "owner_id": "623105333137",
            "region": "us-west-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Security_Group"
            },
            "tags_all": {
              "Name": "Security_Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ad40cb0f96e15c87"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "623105333137",
            "id": "sg-0983f1e0a5db7c926",
            "region": "us-west-1"
          },
          "dependencies": [
            "aws_vpc.Vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Security_Group_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:623105333137:security-group/sg-0ca6643bc6ded5d7b",
            "description": "Allows inbound traffic within vpc",
            "egress": [],
            "id": "sg-0ca6643bc6ded5d7b",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "Security_Group_b",
            "name_prefix": "",
            "owner_id": "623105333137",
            "region": "us-west-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ad40cb0f96e15c87"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "623105333137",
            "id": "sg-0ca6643bc6ded5d7b",
            "region": "us-west-1"
          },
          "dependencies": [
            "aws_vpc.Vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:623105333137:subnet/subnet-0d779e1d013fc65d4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d779e1d013fc65d4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "623105333137",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-1",
            "tags": {
              "Name": "Subnet1"
            },
            "tags_all": {
              "Name": "Subnet1"
            },
            "vpc_id": "vpc-0ad40cb0f96e15c87"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "623105333137",
            "id": "subnet-0d779e1d013fc65d4",
            "region": "us-west-1"
          },
          "dependencies": [
            "aws_vpc.Vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:623105333137:subnet/subnet-073b41e495798e4f3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-073b41e495798e4f3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "623105333137",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-1",
            "tags": {
              "Name": "Subnet2"
            },
            "tags_all": {
              "Name": "Subnet2"
            },
            "vpc_id": "vpc-0ad40cb0f96e15c87"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "623105333137",
            "id": "subnet-073b41e495798e4f3",
            "region": "us-west-1"
          },
          "dependencies": [
            "aws_vpc.Vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:623105333137:vpc/vpc-0ad40cb0f96e15c87",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0437bafaabe47654d",
            "default_route_table_id": "rtb-082465df10cc3ade5",
            "default_security_group_id": "sg-0c77cf529557adf23",
            "dhcp_options_id": "dopt-035a39db2f6502b61",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ad40cb0f96e15c87",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-082465df10cc3ade5",
            "owner_id": "623105333137",
            "region": "us-west-1",
            "tags": {
              "Name": "Vpc"
            },
            "tags_all": {
              "Name": "Vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "623105333137",
            "id": "vpc-0ad40cb0f96e15c87",
            "region": "us-west-1"
          }
        }
      ]
    }
  ]
}